# webserv

./: .asanignore  .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  ACTIONPLAN.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DOXYGENSTYLEGUIDE.md  Doxyfile  LICENSE  Makefile  README.md  STYLEGUIDE.md
.github/: issue_template.md  pull_request_template.md
.github/workflows/: ci.yml  discord.yml  docs.yml
cmake/: CTestSettings.cmake  ClangTools.cmake  CompilerOptions.cmake  Sanitizers.cmake  Warnings.cmake
configs/: autoindex.conf  bad_brace.conf  bad_port.conf  cgi.conf  config.conf  default.conf  delete.conf  duplicate_keys.conf  full.conf  index.conf  invalid_method.conf  missing_block.conf  missing_semicolon.conf  simple.conf  unknown_directive.conf  upload.conf
configs/configParser_test/: autoindex_invalid.conf  client_max_body_size_bad_unit.conf  control_char_in_identifier.conf  duplicate_directives_cgi_extension.conf  duplicate_directives_client_max_body_size.conf  duplicate_directives_host.conf  duplicate_directives_location_root.conf  duplicate_directives_server_listen.conf  duplicate_directives_server_name.conf  duplicate_directives_upload_store.conf  empty.conf  error_page_args.conf  escapes_in_single_quote.conf  extra_tokens.conf  invalid_error_page_unquoted.conf  invalid_escape.conf  invalid_return_unquoted.conf  invalid_top_level.conf  listen_non_numeric.conf  listen_out_of_range.conf  methods_invalid_method.conf  methods_no_methods.conf  missing_lbrace.conf  missing_rbrace.conf  missing_semicolon.conf  newline_in_string.conf  number_suffix_invalid.conf  return_wrong_arg_count.conf  (+19 more)
docs/: README.md
iurii/: Makefile
notes/: curl.en.md  curl.ru.md  curls_for_terminal.md  fd_macro.md  main_example.cpp  main_example1.cpp  socket.md
scripts/: run_all_tests.sh  run_webserv.sh  run_webserv_asan.sh  run_webserv_tsan.sh  run_webserv_ubsan.sh
src/: main.cpp
tests/: Header_size_overflow.py  Slowloris-like_attack.cpp  Slowloris-like_attack.py  test_config.cpp  test_config_parser.cpp  test_location.cpp  test_server.cpp  test_tokenizer.cpp
(+65 files in other folders)
